test/sema/typeck/fn/variadic-missing-required.out
error: Call should have 1 arguments but got only 0.
--> variadic-missing-required.dora:3:5
 | fn f(_x: Int32, _y: Int32...) {}
 | fn g() {
 |     f();
       ~~~
 | }
 | 
1 error found.
