test/sema/typeck/fn/variadic-missing-required.dora
fn f(_x: Int32, _y: Int32...) {}
fn g() {
    f();
}
